Added a new test for testing the async task